--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run lint
 
       - name: Run tests
-        run: npm test -- --run
+        run: npx vitest run
 
   build:
     name: Build Verification
